# KullexAi

./: .gitignore  LICENSE  README.md  pyproject.toml
KullexAi/: README.md  pyproject.toml
src/ai_cli/: __init__.py  cli.py  config.py  kull_init.py  prompts.py  redact.py  stream.py  user.py  user_profile.py
src/ai_cli/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py  openrouter.py  vllm.py
